# rafka

./: Cargo.toml  LICENSE  README.md
.github/workflows/: docker-build.yml  rust.yml
config/: config.yml
crates/broker/: Cargo.toml
crates/broker/src/: broker.rs  hooks_integration.rs  lib.rs  request.rs  response.rs  simple_broker.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/consumer/: Cargo.toml
crates/consumer/src/: consumer.rs  lib.rs  simple_consumer.rs
crates/core/: Cargo.toml
crates/core/src/: broker.rs  config.rs  configurable.rs  consumer.rs  hooks.rs  lib.rs  message.rs  producer.rs  storage_engine.rs
crates/core/src/errors/: broker_error.rs  consumer_error.rs  mod.rs  producer_error.rs  storage_error.rs
crates/dht/: Cargo.toml
crates/dht/src/: dht.rs  lib.rs
crates/hooks/: Cargo.toml
crates/producer/: Cargo.toml
crates/producer/src/: lib.rs  producer.rs  simple_producer.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: protocol.rs
crates/storage/: Cargo.toml
crates/storage/src/: factory.rs  in_memory.rs  lib.rs
scripts/: basic.sh  helloworld.sh  helloworld_demo.sh  offset_tracking_demo.sh  partitioned_demo.sh  retention_demo.sh  storage_demo.sh
scripts/grpc_old/: offset_tracking_demo.sh  retention_demo.sh
tasks/: DBtasks.md  INFAtasks.md  MQtasks.md  Roadmap.md
tests/: helloworld.rs  offset_tracking.rs  partitioned.rs  retention.rs
tests/common/: mod.rs
