[package]
name = "rafka"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
rafka-broker = { path = "crates/broker" }
rafka-core = { path = "crates/core" }
rafka-dht = {path = "crates/dht"}
rafka-producer = { path = "crates/producer" }
rafka-consumer = { path = "crates/consumer" }
rafka-storage = { path = "crates/storage" }
rafka-cli = { path = "crates/cli" }

tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace]
members = [
    "crates/broker",
    "crates/core",
    "crates/producer",
    "crates/consumer",
    "crates/storage", 
    "crates/cli"
]


