[package]
name = "rafka-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
rafka-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1.3", features = ["v4"] }
tracing = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
prost-types = "0.13.4"
rafka-storage = { path = "../storage" }
bytes = "1.4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.216", features = ["derive"] }
