[package]
name = "rafka-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
rafka-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.134"
serde = "1.0.216"