[package]
name = "rafka-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"

[dev-dependencies]
tokio-test = "0.4"

[toolchain]
channel = "nightly"
components = ["rustfmt", "clippy"]
